# Action_Detector

./: .gitignore  AGENTS.md  README.md  progress.md
docs/: complex_action_strategy.md  data_capture_labeling.md
firmware/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
firmware/main/: CMakeLists.txt  Kconfig  app_main.c  bmi270_i2c.c  bmi270_i2c.h  idf_component.yml  label_audio.c  label_audio.h  speaker_audio.c  speaker_audio.h  udp_sender.c  udp_sender.h
firmware/main/audio_labels/: README.md  idle.pcm  swipe_left.pcm  swipe_right.pcm
pc/: README.md  build_model.py  capture_labeled.py  dtw_baseline.py  live_classify.py  udp_receiver.py
scripts/: udp_listener.py
